--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,68 @@
+
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@layer utilities {
+  .animate-slide-in-right {
+    animation: slide-in-right 0.4s ease-out forwards;
+  }
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@layer utilities {
+  .animate-fade-in {
+    animation: fade-in 0.3s ease-out forwards;
+  }
+
+  @keyframes slide-down {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  @layer utilities {
+    .animate-slide-down {
+      animation: slide-down 0.3s ease-out forwards;
+    }
+  }
+  
+}
+
+:root {
+  --background: black;
+  --foreground: #f1eeee;
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: black;
     --foreground: #ededed;
   }
 }
@@ -22,5 +70,30 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'cairo' , sans-serif;
+}
+@media (max-width: 730px) {
+  nav#main-links {
+    display: none !important;
+  }
+
+  .navbar-container {
+    flex-direction: row-reverse !important;
+  }
+
+  .navbar-left {
+    order: 3 !important;
+  }
+
+  .navbar-center {
+    order: 2 !important;
+  }
+
+  .navbar-right {
+    order: 1 !important;
+  }
+
+  .menu-icon {
+    display: block !important;
+  }
 }
